<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Transportation</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="bookmark">BOOKMARKS</string>
    <string name="feedback">FEEDBACK</string>
    <string name="bookmarkthis">BookMark</string>
    <string name="faq">FAQ</string>
    <string name="contactus">CONTACT US</string>
    <string name="update">CHECK FOR UPDATE</string>
    <string name="title_activity_search_list">SearchListActivity</string>
    <string name="frompath">From</string>
    <string name="topath">To</string>
    <string name="through">Through</string>
    <string name="time">Enter Time</string>
    <string name="date">Enter Date</string>
    <string name="fromprice">From</string>
    <string name="toprice">To Price</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_search_detail">SearchDetailActivity</string>
    <string name="title_activity_faq">FAQActivity</string>
    <string name="title_activity_book_mark">BookMarkActivity</string>
    <string name="orderbycost"> $ </string>
    <string name="orderbytime"> T </string>
    <string name="ok"> OK </string>
    <string name="done"> Done </string>
    <string name="validation_name">"The field cannot be left empty"</string>
    <string name="container"> Container </string>
    <string name="Add"> + </string>
    <string name="Subtract"> - </string>
    <string name="all"> ALL </string>
    <string name="splashImageView"> Splash </string>
    <string name="home">HOME</string>
    <string name="setting">Setting</string>
    <string name="searchList">SEARCH LIST</string>
    <string name="searchListplane">SEARCH LIST PLANE</string>
    <string name="searchDetail">SEARCH DETAILS</string>
    <string name="center">center</string>
    <string name="app">APPLICATION</string>
    <string name="policy">POLICY</string>
    <string name="legalDocument">LEGAL DOCUMENTS</string>
    <string name="to">To:</string>
    <string name="subject">Subject:</string>
    <string name="cc_bcc">Cc/Bcc:</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="Price">$</string>
    <string name="Time">T</string>
    <string name="nomatchfound">No Direct Route</string>
    <string name="checkforupdates">Checking for updates ...</string>
    <string name="return_type">Return</string>
    <string name="return_type_withcolom">Returns Back :</string>
    <string name="alternate_routelist">ALTERNATIVE ROUTE LIST</string>
    <string name="minussign">" - "</string>
    <string name="sorry">Sorry!!! There are no alternative routes.</string>
    <string name="crossoveremail">uttam@crossovernepal.com</string>
    <string name="bus">BUS</string>
    <string name="micro">MICRO</string>
    <string name="plane">PLANE</string>
    <string name="yourname">Your Name:</string>
    <string name="tempo">TEMPO</string>
    <string name="sendfeedback">Send Feedback</string>
    <string name="youremail">Your Email:</string>
    <string name="yourfeedback">Your Feedback:</string>
    <string name="allday">All Day</string>
    <string name="pleasewait">Please Wait ...</string>
    <string name="airlines">AIRLINES</string>
    <string name="yeti">Yeti</string>
    <string name="buddha">Buddha</string>
    <string name="sita">Sita</string>
    <string name="tara">Tara</string>
    <string name="agni">Agni</string>
    <string name="searchby">SEARCH BY</string>
    <string name="showalternativeroute">Show Alternative Route</string>

    <string-array name="yes_no">
        <item>Yes</item>
        <item>No</item>
    </string-array>

</resources>