<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:orientation="vertical" 
    android:background="@color/primaryColor"
    >
    
    <ImageButton 
        android:id="@+id/backBtn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/backbutton"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/primaryColor"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
     <ImageButton 
        android:id="@+id/reloadBtn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/refresh"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/primaryColor"
        android:contentDescription="@string/home"
       	
      />
     

          <Button
         android:id="@+id/orderByPriceBtn"
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_centerVertical="true"
         android:layout_toLeftOf="@+id/orderByTimeBtn"
         android:layout_toStartOf="@id/orderByTimeBtn"
         android:background="@color/primaryColor"
         android:text="@string/Price"
         android:textColor="@color/white" />
          
          <Button
         android:id="@+id/orderByTimeBtn"
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_centerVertical="true"
		 android:layout_alignParentRight="true"
		 android:layout_alignParentEnd="true"
         android:background="@color/primaryColor"
         android:text="@string/Time" 
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:textColor="@color/white"/>
		
          

</RelativeLayout>
