<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="true" >

    <LinearLayout
        android:id="@+id/llShowHide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            android:weightSum="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.37"
                android:text="@string/to" />

            <EditText
                android:id="@+id/etTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.63"
                android:background="@android:color/transparent"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="end"
                android:inputType="textEmailAddress"
                android:text="@string/crossoveremail" >
            </EditText>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="#607D8B" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            android:weightSum="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:text="@string/cc_bcc" />

            <EditText
                android:id="@+id/etCcBcc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.7"
                android:background="@android:color/transparent"
                android:inputType="textEmailAddress" >
            </EditText>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="#607D8B" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            android:weightSum="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:text="@string/subject" />

            <EditText
                android:id="@+id/etSubject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.7"
                android:background="@android:color/transparent"
                android:inputType="textMultiLine" >
            </EditText>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="#607D8B" />

        <EditText
            android:id="@+id/etMessageBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:inputType="textMultiLine"
            android:padding="5dp" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:weightSum="1" >

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="0.5"
            android:clickable="true"
            android:text="@string/cancel"
            android:textColor="@drawable/text_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.5"
            android:clickable="true"
            android:gravity="end"
            android:text="@string/send"
            android:textColor="@drawable/text_color"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>